--- a/eureka-client-new/pom.xml
+++ b/eureka-client-new/pom.xml
@@ -43,6 +43,10 @@
             <version>4.1.2</version>
         </dependency>
         <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
