--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -8,17 +8,11 @@ spring.cloud.gateway.discovery.locator.enabled=true
 spring.cloud.gateway.discovery.locator.lower-case-service-id=true
 
 spring.cloud.gateway.routes[0].id=test
-spring.cloud.gateway.routes[0].uri=lb://eureka-client
+spring.cloud.gateway.routes[0].uri=lb://hello-service
 spring.cloud.gateway.routes[0].predicates[0]=Path=/test
 spring.cloud.gateway.routes[0].predicates[1]=Method=GET
 
 spring.cloud.gateway.routes[1].id=hello
-spring.cloud.gateway.routes[1].uri=lb://eureka-client
+spring.cloud.gateway.routes[1].uri=lb://hello-service
 spring.cloud.gateway.routes[1].predicates[0]=Path=/hello
 spring.cloud.gateway.routes[1].predicates[1]=Method=GET
-
-spring.cloud.gateway.routes[2].id=another
-spring.cloud.gateway.routes[2].uri=lb://eureka-client-new
-spring.cloud.gateway.routes[2].predicates[0]=Path=/another
-spring.cloud.gateway.routes[2].predicates[1]=Method=GET
-
