--- a/service-registry/Dockerfile
+++ b/service-registry/Dockerfile
@@ -1,5 +1,5 @@
 FROM openjdk:17-jdk-slim-buster
 WORKDIR /app
-COPY target/post-service-0.1.jar /app/post-service.jar
-ENTRYPOINT ["java", "-jar", "post-service.jar"]
-EXPOSE 8080
+COPY target/service-registry-0.1.jar /app/service-registry.jar
+ENTRYPOINT ["java", "-jar", "service-registry.jar"]
+EXPOSE 8761
