--- a/compose.yml
+++ b/compose.yml
@@ -3,34 +3,34 @@ networks:
     driver: bridge
 
 services:
-  service-registry:
+  eureka-server:
     networks:
       - app-net
-    build: service-registry
+    build: eureka-server
     ports:
       - "8761:8761"
     environment:
-      - EUREKA_CLIENT_SERVICE_URL=http://service-registry:8761/eureka
+      - EUREKA_CLIENT_SERVICE_URL=http://eureka-server:8761/eureka
 
   hello-service:
     networks:
       - app-net
     depends_on:
-      - service-registry
+      - eureka-server
     build: hello-service
     ports:
       - "8080"
     environment:
-      - EUREKA_CLIENT_SERVICE_URL=http://service-registry:8761/eureka
+      - EUREKA_CLIENT_SERVICE_URL=http://eureka-server:8761/eureka
 
   api-gateway:
     networks:
       - app-net
     depends_on:
-      - service-registry
+      - eureka-server
       - hello-service
     build: api-gateway
     ports:
       - "8765:8765"
     environment:
-      - EUREKA_CLIENT_SERVICE_URL=http://service-registry:8761/eureka
+      - EUREKA_CLIENT_SERVICE_URL=http://eureka-server:8761/eureka
